--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,7 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
-    "ghcr.io/devcontainers/features/node:18": {
-      "version": "18.12.1"
-    },
-    "ghcr.io/devcontainers/features/docker-from-docker:1": {
-      "version": "latest",
-      "moby": true
-    }
+	"ghcr.io/devcontainers/features/docker-from-docker:1": {},
+	"ghcr.io/devcontainers/features/node:1": {}
   }
 }
