--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "postcss-preset-env": "^7.8.3",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.3"
   }
 }
