--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,7 @@
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.10",
-    "ts-node": "10.4.0",
-    "typescript": "^4.5.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
