--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.2.2",
+    "classnames": "^2.3.2",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
